examples/test/testpolicy8767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8767
  namespace: namespace5
spec:
  podSelector:
    matchLabels:
      key29: value5
      key33: value29
      key43: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value32
          key8: value21
      podSelector:
        matchLabels:
          key10: value44
          key24: value27
          key25: value34
